--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@aptos-labs/ts-sdk": "^1.28.0",
+    "@aptos-labs/wallet-adapter-react": "^3.7.0",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.16.1",
@@ -16,11 +18,13 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/socket.io-client": "^3.0.0",
+    "aptos": "^1.21.0",
     "axios": "^1.7.2",
     "axios-case-converter": "^1.1.1",
     "date-fns": "^3.6.0",
     "lodash.debounce": "^4.0.8",
     "notistack": "^3.0.1",
+    "petra-plugin-wallet-adapter": "^0.4.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-easy-crop": "^5.0.8",
